<resources>
    <string name="app_name">Disaster App</string>
    <string name="darkmode">Dark Mode</string>
    <string name="namedisaster">Informasi Bencana Terbaru</string>
    <string name="img">ImgView</string>
    <string name="txtbencana">Bencana</string>
    <string name="txtdeskripsi">Deskripsi</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidmFubjUiLCJhIjoiY2xrOWhudHRzMHVsdjNmcm82djhlNGNjaCJ9.pUv3h82jkI72FMpS3oaaeg</string>
    <string name="searchbencana">Cari Bencana</string>
    <string name="Setting">Setting</string>
    <string name="notifikasi">notifikasi</string>
    <string name="disaster_type">Disaster Type</string>
    <string name="createat">create at:\n</string>
    <string name="type_banjir">Banjir</string>
    <string name="type_gempa">Gempa</string>
    <string name="type_kebakaran">Kebakaran</string>
    <string name="type_kabut">Kabut</string>
    <string name="type_anginkencang">Angin Kencang</string>
    <string name="type_gunungapi">Gunung Api</string>
    <string name="location">Location</string>
</resources>