<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:mapbox_cameraTargetLat="-2.5"
        app:mapbox_cameraTargetLng="118"
        app:mapbox_cameraZoom="2.5">


        <ProgressBar
            android:id="@+id/loadingProggres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginStart="200dp"/>
    </com.mapbox.maps.MapView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/searchbar_scrolling_view_behavior">
        <!-- Screen content goes here. -->
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/searchbencana" />
        <HorizontalScrollView
            android:id="@+id/horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="0dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="VisualLintBounds">

                <Button
                    android:id="@+id/btnBanjir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_banjir"
                    android:background="@drawable/bg_type"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnGempa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_gempa"
                    android:background="@drawable/bg_type"
                    android:layout_marginEnd="16dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnKebakaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_kebakaran"
                    android:background="@drawable/bg_type"
                    android:layout_marginEnd="16dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnKabut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/type_kabut"
                    android:background="@drawable/bg_type"
                    tools:ignore="ButtonStyle,TextContrastCheck" />

                <Button
                    android:id="@+id/btnAnginKencang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_anginkencang"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_type"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnGunungApi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_gunungapi"
                    android:background="@drawable/bg_type"
                    android:layout_marginEnd="16dp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </HorizontalScrollView>
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/searchbencana"
        app:layout_anchor="@id/search_bar">
        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->

    </com.google.android.material.search.SearchView>



    <FrameLayout
        android:id="@+id/standardbottomsheet"
        android:layout_width="match_parent"
        android:layout_height="389dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent">
        <include layout="@layout/bottom_sheet_layout" />
    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>